[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://demos/ui/layer_panel.gd" id="1_script"]

[node name="LayerPanel" type="VBoxContainer"]
script = ExtResource("1_script")
theme_override_constants/separation = 6

[node name="Header" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üëÅ  Visibility Layers"

[node name="LayerRow" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Layer1" type="CheckBox" parent="LayerRow"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Layer 1"

[node name="Layer2" type="CheckBox" parent="LayerRow"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Layer 2"

[node name="Layer3" type="CheckBox" parent="LayerRow"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Layer 3"
